fluxcd/clusters/pi/home/qbit/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qbit
  namespace: home
  labels:
    app: qbit
spec:
  serviceName: qbit
  replicas: 1
  selector:
    matchLabels:
      app: qbit
  template:
    metadata:
      name: qbit
      namespace: home
      labels:
        app: qbit
    spec:
      nodeName: k3
      terminationGracePeriodSeconds: 60
      securityContext:
        fsGroup: 1000
        sysctls:
          - name: net.ipv4.conf.all.src_valid_mark
            value: "1"

      containers:
        - name: wireguard
          image: lscr.io/linuxserver/wireguard:arm64v8-v1.0.20210914-ls80
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "64Mi"
              cpu: "250m"

          securityContext:
            capabilities:
              add: ["NET_ADMIN", "NET_RAW", "SYS_MODULE", "CHOWN", "SETGID", "SETUID"]
              drop: ["ALL"]

          ports:
            - containerPort: 8080
              name: qbit-webui-port
            - containerPort: 6881
              protocol: TCP
              name: torrent-tcp
            - containerPort: 6881
              protocol: UDP
              name: torrent-udp

          volumeMounts:
            - name: lib-modules
              mountPath: /lib/modules
            - name: wireguard-configs
              mountPath: /config

        - name: qbit
          image: lscr.io/linuxserver/qbittorrent:5.0.3
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "2048Mi"
              cpu: "1000m"

          securityContext:
            capabilities:
              add: ["CHOWN", "SETGID", "SETUID"]
              drop: ["ALL"]

          volumeMounts:
            - name: media-root
              mountPath: /media
            - name: qbit-configs
              mountPath: /config

      volumes:
        - name: lib-modules
          hostPath:
            path: /lib/modules
        - name: media-root
          nfs:
            server: 192.168.86.10
            path: /nfs/media
            readOnly: false
        - name: wireguard-configs
          persistentVolumeClaim:
            claimName: wireguard-configs-local
  volumeClaimTemplates:
    - metadata:
        name: qbit-configs
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 200Mi
