fluxcd/clusters/pi/home/qbit/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: qbit
  namespace: home
spec:
  selector:
    app: qbit
  ports:
    - name: qbit-port
      port: 80
      targetPort: qbit-webui-port
